@@ -1,2 +1,4 @@
-tuptime
+a.out
+load
 malloc
+tuptime
